# employee_graph

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.develop.yml  docker-compose.yml  main.py  package-lock.json  pyproject.toml
api/: __init__.py  auth.py  crud.py  db.py  models.py  routes.py  routes_helpers.py  schemas.py
api/alembic/: env.py
api/alembic/versions/: 1e4b94940c7c_.py  240474d780d3_.py  3018304c6ece_.py  37968aa09173_.py  6113a37ae49a_.py  679ec24f866a_.py  691202a9ce85_.py  8ad35c9b215c_.py  91aa3641786c_.py  95d69af35144_.py  b0ed3ecd6d6f_add_config.py  be65b6d2f715_.py  c47ea84bb35f_.py  d0958e5255f3_.py  d6e225202b35_.py  ea940ab329b8_.py
api/routes/: __init__.py  config.py  departments.py  employee.py  graph.py  node_types.py  nodes.py  positions.py  projects.py  relations.py  sections.py
nginx/: nginx.conf
web/: Dockerfile  index.html  package-lock.json  package.json
web/src/: App.jsx  theme.js
web/src/components/: GraphComponent.jsx  Layout.jsx  Loader.jsx  PalettePicker.jsx  ProtectedRoute.jsx  PublicRoute.jsx
web/src/context/: AuthContext.jsx
web/src/pages/: Dashboard.jsx  Departments.jsx  Employee.jsx  Graph.jsx  Home.jsx  Login.jsx  Management.jsx  Positions.jsx  Profile.jsx  Projects.jsx  Register.jsx  Section.jsx  Table.jsx
web/src/pages/Section/: Dialogs.jsx  Section.jsx
web/src/services/: api.js  helpers.js
