[project]
name = "employee_graph"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "g4f[all]>=0.5.2.0",
    "gpt4all>=2.8.2",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.3",
    "pypollinations>=0.2.0",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
